--- a/index.html
+++ b/index.html
@@ -51,17 +51,30 @@
       const roles = ["Supplier", "Procurer", "Surveyor", "Transporter", "Logistics", "CHA", "Insurance"];
 
       const characterAvatars = {
-        Supplier: "?????",
-        Procurer: "??",
-        Admin: "?????",
-        Surveyor: "??",
-        Transporter: "??",
-        Logistics: "??",
-        CHA: "??",
-        Insurance: "???",
-        Arbitrator: "??",
-        Accounts: "??"
-      };
+  Supplier: "images/supplier.png",
+  Procurer: "images/procurer.png",
+  Admin: "images/admin.png",
+  Surveyor: "images/surveyor.png",
+  Transporter: "images/transporter.png",
+  Logistics: "images/logistics.png",
+  CHA: "images/cha.png",
+  Insurance: "images/insurance.png",
+  Arbitrator: "images/arbitrator.png",
+  Accounts: "images/accounts.png"
+};
+
+const roleBackgrounds = {
+  Supplier: "url('images/supplier-bg.jpg')",
+  Procurer: "url('images/procurer-bg.jpg')",
+  Admin: "url('images/admin-bg.jpg')",
+  Surveyor: "url('images/surveyor-bg.jpg')",
+  Transporter: "url('images/transporter-bg.jpg')",
+  Logistics: "url('images/logistics-bg.jpg')",
+  CHA: "url('images/cha-bg.jpg')",
+  Insurance: "url('images/insurance-bg.jpg')",
+  Arbitrator: "url('images/arbitrator-bg.jpg')",
+  Accounts: "url('images/accounts-bg.jpg')"
+};
 
       const roleEnvironments = {
         Supplier: "?? Shop/Warehouse",
